@@ -8,6 +8,7 @@
 
 [terrain]
     symbol_image=void
+    editor_image=off-map/offmap-editor
     id=off_map
     name= _ "None"
     string=_off^_usr
@@ -890,6 +891,7 @@
 
 [terrain]
     symbol_image=cave/wall-rough1
+    editor_image=cave/wall-editor
     id=cavewall
     name= _ "Cave Wall"
     string=Xu
