@@ -17,6 +17,7 @@ Version 1.3.6+svn:
     * The resize option can now use the current tiles to expand the map
       instead of the background tile.
     * When resizing the map, the origin can also be modified.
+    * Tiles can now have their image independant from the minimap image.
 
   * Language and translations
     * Updated translations: Danish, Finnish, French, German, Greek, Japanese,
